# novelai-python

./: .gitignore  .nerve.toml  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE.MD  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: python_test.yml
playground/: augment-image.py  enhance.py  gen_image.py  generate.py  generate_image.py  generate_image_img2img.py  generate_stream.py  generate_voice.py  information.py  login.py  queue_select.py  random_prompt.py  read_nai_tag.py  simple.py  subscription.py  suggest_tag.py  upscale.py  vibe.py  vibe_img2img.py  vibe_inpaint.py  viber-transfer.py
playground/image_metadata/: apply_lsb.py  apply_lsb_to_image.py  image_lsb_data_extractor.py  read_image.py  read_image_info.py  read_image_nai_tag.py  read_lsb.py  read_nai_tag.py  verify.py  verify_is_nai_generated.py
playground/mask/: __init__.py
playground/other/: augment-image.py  queue_select.py
playground/paint_mask/: __init__.py
playground/prompt_factory_exp/: gen.py  loader.py
playground/tokenizer/: ignore.tokenizer_demo.py  usage.py  use_tokenizer_directly.py
record/ai/augment_image/: emotion.json  export.py
record/ai/augment_image/emotion/: schema.json
record/ai/generate_image/: enhance.json  export.py  image2image.json  image2image_v3.json  inpaint.json  inpaint_v3.json  text2image.json  text2image_v3.json  text2image_v4.json  vibe_image.json  vibe_img2img.json  vibe_inpaint.json
record/ai/generate_image/image2image_v3/: schema.json
record/ai/generate_image/inpaint/: schema.json
record/ai/generate_image/inpaint_v3/: schema.json
record/ai/generate_image/text2image/: schema.json
record/ai/generate_image/text2image_v3/: schema.json
record/ai/generate_image/text2image_v4/: schema.json
record/ai/generate_image/vibe_image/: schema.json
record/ai/generate_image/vibe_inpaint/: schema.json
record/ai/generate_stream/: common.json
record/ai/generate_stream/common/: schema.json
record/image_generate/: export.py  image2image.json
record/image_generate/enhance/: enhance.json
record/image_generate/image2image/: image2image.json
record/image_generate/text2image/: text2image.json
record/image_generate/vibe_image/: vibe_image.json
record/image_generate/vibe_img2img/: vibe_img2img.json
src/novelai_python/: __init__.py  _enum.py  _exceptions.py  error.py  hash.py  schema.py  server.py
src/novelai_python/_response/: __init__.py  schema.py
src/novelai_python/_response/ai/: __init__.py  generate.py  generate_image.py  generate_stream.py  generate_voice.py  upscale.py
src/novelai_python/_response/user/: __init__.py  information.py  login.py  subscription.py
src/novelai_python/credential/: ApiToken.py  JwtToken.py  UserAuth.py  __init__.py  _base.py
src/novelai_python/sdk/: __init__.py  schema.py
src/novelai_python/tokenizer/: NOTICE.MD  __init__.py  clip_simple_tokenizer.py  simple_tokenizer.py  tokenizer_demo.py
src/novelai_python/utils/: __init__.py  encode.py  hash.py  useful.py
tests/: test_generate_voice.py  test_random_prompt.py  test_server.py  test_server_run.py  test_tokenizer.py  test_upscale.py  test_user_information.py  test_user_login.py  test_user_subscription.py
(+78 files in other folders)
