[project]
name = "novelai-python"
version = "0.7.9"
description = "NovelAI Python Binding With Pydantic"
authors = [
    { name = "sudoskys", email = "coldlando@hotmail.com" },
]
dependencies = [
    "elara>=0.5.5",
    "loguru>=0.7.2",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.9.0",
    "httpx>=0.26.0",
    "shortuuid>=1.0.11",
    "Pillow>=10.2.0",
    "curl-cffi>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0.post1",
    "numpy>=1.24.4",
    "argon2-cffi>=23.1.0",
    "opencv-python>=4.8.1.78",
    "fake-useragent>=1.4.0",
    "tenacity>=8.2.3",
    "sentencepiece>=0.2.0",
    "pynacl>=1.5.0",
    "ftfy>=6.2.0",
    "regex>=2023.12.25",
    "tokenizers>=0.15.2",
    "json-repair>=0.29.4",
    "robust-downloader>=0.0.2",
    "bchlib>=2.1.3",
    "arrow>=1.3.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache License 2.0" }

[project.urls]
Repository = "https://github.com/LlmKira/novelai-python/"
Issues = "https://github.com/LlmKira/novelai-python/issues"

[project.optional-dependencies]
testing = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "wasmtime>=28.0.0",
]
